# beltagger

./: .gitignore  README.md  build.bat  build.sh  sufftable.pl  tagset_YABC.html
example/: akudovich.txt  karatkevich.txt
src_assembler/: AdjAddition.h  AdjComp.h  AdjExcl.h  Adjective.h  Adverb.h  AuxPOS.cpp  AuxPOS.h  CMakeLists.txt  CommonAbbr.h  Composer.cpp  Composer.h  DBTypedefs.h  FuncWords.h  NP_Abbr.h  NP_Excl.cpp  NP_Excl.h  NP_Main.cpp  NP_Main.h  Noun.h  NounAddition.h  NounExcl.h  NumAndPron.cpp  NumAndPron.h  Numeral.h  POS.cpp  POS.h  POS_Template.cpp  POS_Template.h  ParsePrefix.cpp  ParsePrefix.h  Predicatives.h  Pronoun.h  ProperNoun.h  Verb.h  defines.h  main.cpp
src_db/: src_abbr.txt  src_adj_addition.txt  src_adj_comp.txt  src_adj_exclusions.txt  src_adj_prefixed.txt  src_adj_template.txt  src_adv.txt  src_fw_conjunctions.txt  src_fw_interjections.txt  src_fw_modals.txt  src_fw_particles.txt  src_fw_prepositions.txt  src_fw_punctuation.txt  src_noun_addition.txt  src_noun_exclusions.txt  src_noun_prefixed.txt  src_noun_template.txt  src_np_abbr.txt  src_np_antr_exclusions.txt  src_np_antr_main.txt  src_np_org_main.txt  src_np_top_main.txt  (+6 more)
src_lemmatizer/: CMakeLists.txt  Compounds.cpp  Compounds.h  GetOptions.cpp  GetOptions.h  Guessing.cpp  Guessing.h  LemMemo.cpp  LemMemo.h  LemNomemo.cpp  LemNomemo.h  LemWithGuessing.h  Lemmatizer.cpp  Lemmatizer.h  PrNumbers.cpp  PrNumbers.h  SymbolTweaker.cpp  SymbolTweaker.h  TarDeep.cpp  TarDeep.h  TarShallow.cpp  TarShallow.h  constants.h  defines.h  functions.cpp  functions.h  main.cpp  taggerTypes.h
